Revisando e adicionando funcionalidades

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "ftp": "^0.3.10",
     "googleapis": "39",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
     "react-device-detect": "^2.0.1"
   },
